# cpp-c-callback-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
src/: c_api.c  c_api.h  cpp_callbacks.h  main.cpp
